Closed Bug 1493052 Opened 7 years ago Closed 7 years ago

MerchantValidationEvent.complete() must throw InvalidStateError

Categories

(Core :: DOM: Web Payments, defect, P1)

defect

Tracking

()

RESOLVED FIXED
mozilla64
Tracking Status
firefox64 --- fixed

People

(Reporter: marcosc, Assigned: marcosc)

References

(Blocks 1 open bug, )

Details

Attachments

(2 files, 1 obsolete file)

It's currently throwing a NS_ERROR_UNEXPECTED error.
Assignee: nobody → mcaceres
Status: NEW → ASSIGNED
Severity: normal → trivial
Priority: -- → P1
Attachment #9010833 - Flags: review?(echuang)
Attachment #9010833 - Flags: review?(echuang) → review+
Pushed by rgurzau@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/f46005c41416 MerchantValidationEvent.complete() must throw InvalidStateError.
Keywords: checkin-needed
file test_payerDetails.html requests long timeout. r=edenchuang
Status: ASSIGNED → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla64
Attachment #9011719 - Attachment is obsolete: true
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: