Bug 1493052 - MerchantValidationEvent.complete() must throw InvalidStateError.

Spec conformance

Differential Revision: https://phabricator.services.mozilla.com/D6602